feat: Creación del Layout para comenzar a probar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,10 @@
 ---
-
+import Layout from '../layouts/layout.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Mis 15 - Invitación">
+	<main class="min-h-screen flex flex-col items-center justify-center p-4">
+		<h1 class="text-5xl font-serif mb-4 text-center">Abril</h1>
+		<p class="italic text-xl text-gray-600">¡Estás invitado!</p>
+	</main>
+</Layout>
