--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/layout.astro';
 ---
 
 <Layout title="Mis 15 - Invitación">
-	<main class="min-h-screen flex flex-col items-center justify-center p-4">
+	<main class="font-elegant min-h-screen flex flex-col items-center justify-center p-4">
 		<h1 class="text-5xl font-serif mb-4 text-center">Abril</h1>
 		<p class="italic text-xl text-gray-600">¡Estás invitado!</p>
 	</main>
