fix: actualizar index con contenido correcto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/layout.astro';
 
 <Layout title="Mis 15 - Invitación">
 	<main class="font-elegant min-h-screen flex flex-col items-center justify-center p-4">
-		<h1 class="text-5xl font-serif mb-4 text-center">Abril</h1>
-		<p class="italic text-xl text-gray-600">¡Estás invitado!</p>
+		<h1 class="text-5xl font-serif mb-4 text-center">Abril 🎉</h1>
+		<p class="italic text-xl text-gray-600">¡Estás invitado a mi celebración!</p>
 	</main>
 </Layout>
