--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,6 @@
 ---
-// src/layouts/Layout.astro
+import '../styles/global.css';
+
 interface Props {
 	title: string;
 }
@@ -17,7 +18,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		</head>
 	<body class="bg-[#faf9f6] text-[#333] antialiased">
-		<slot /> </body>
+		<div class="max-w-6xl px-10 pt-40 mx-auto">
+			<slot />
+		</div>
+	 </body>
 </html>
 
 <style is:global>
@@ -25,6 +29,16 @@ const { title } = Astro.props;
 	@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
     html {
 		scroll-behavior: smooth;
+	}
+	body{
+		margin: 0;
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+		font-size: 1rem;
+		font-weight: 400;
+		line-height: 1.5;
+		color: #212529;
+		text-align: left;
+		background-color: #fff;
 	}
 
 </style>
