--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import Portada from '@/sections/portada.astro'
-import CeremoniaFiesta from '@/sections/ceremonia-fiesta.astro'
-import Galeria from '@/sections/galeria.astro'
-import Regalos from '@/sections/regalos.astro'
-import CuentaRegresiva from '@/sections/cuenta-regresiva.astro'
-import Instagram from '@/sections/instagram.astro'
-import Footer from '@/sections/footer.astro'
+import Portada from '@/blocks/portada.astro'
+import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro'
+import Galeria from '@/blocks/galeria.astro'
+import Regalos from '@/blocks/regalos.astro'
+import CuentaRegresiva from '@/blocks/cuenta-regresiva.astro'
+import Instagram from '@/blocks/instagram.astro'
+import Footer from '@/blocks/footer.astro'
 ---
+
 
 <Layout title="Mis 15 - Invitación">
 	<div class="parallax-mirror" style="visibility: visible; z-index: -100; position: fixed; top: 0px; left: 0px; overflow: hidden; transform: translate3d(0px, -16px, 0px); height: 490px; width: 100%;">
