--- a/src/blocks/ceremonia-fiesta.astro
+++ b/src/blocks/ceremonia-fiesta.astro
@@ -8,7 +8,7 @@
 
   <picture>
     <source type="image/webp" srcset="/flores_Grupo02_A.webp">
-    <!-- <source type="image/png" srcset="/flores_Grupo02_A.png"> -->
+    <source type="image/png" srcset="/flores_Grupo02_A.png">
     <img 
       class="adorno adorno-1 aos-init aos-animate" 
       data-aos="fade-right" 
@@ -16,14 +16,14 @@
       data-aos-duration="1000" 
       data-aos-once="false" 
       alt="" 
+      src="/flores_Grupo02_A.png" 
       loading="lazy">
-      <!-- src="/flores_Grupo02_A.png"  -->
   </picture>
 
 
   <picture>
     <source type="image/webp" srcset="/flores_Grupo02_B.webp">
-    <!-- <source type="image/png" srcset="/flores_Grupo02_B.pngz"> -->
+    <source type="image/png" srcset="/flores_Grupo02_B.pngz">
     <img 
       class="adorno adorno-2 aos-init" 
       data-aos="fade-right" 
@@ -31,14 +31,14 @@
       data-aos-duration="1000" 
       data-aos-once="false" 
       alt="" 
+      src="/flores_Grupo02_B.png" 
       loading="lazy">
-      <!-- src="/flores_Grupo02_B.png"  -->
   </picture>
 
 
   <picture>
     <source type="image/webp" srcset="/flores_Grupo02_C.webp">
-    <!-- <source type="image/png" srcset="/flores_Grupo02_C.png"> -->
+    <source type="image/png" srcset="/flores_Grupo02_C.png">
     <img 
       class="adorno adorno-3 aos-init aos-animate" 
       data-aos="fade-right" 
@@ -46,8 +46,8 @@
       data-aos-duration="1000" 
       data-aos-once="false" 
       alt="" 
+      src="/flores_Grupo02_C.png" 
       loading="lazy">
-      <!-- src="/flores_Grupo02_C.png"  -->
   </picture>
 
 
