--- a/src/blocks/cuenta-regresiva.astro
+++ b/src/blocks/cuenta-regresiva.astro
@@ -10,8 +10,8 @@
 
         <picture>
           <source type="image/webp" srcset="/flores_contador.webp">
-          <!-- <source type="image/png" srcset="/flores_contador.png">
-          <img class="adorno adorno-1" src="/flores_contador.png" alt=""> -->
+          <source type="image/png" srcset="/flores_contador.png">
+          <img class="adorno adorno-1" src="/flores_contador.png" alt="">
         </picture>
 
 
