--- a/src/blocks/portada.astro
+++ b/src/blocks/portada.astro
@@ -9,10 +9,26 @@
         </div>
         <div class="portada-container d-flex justify-content-center align-items-center">
             <div class="portada-container-2">
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
-                <picture></picture>
+                <picture>
+                    <source type="image/webp" srcset="/flores_Grupo01_A.webp">
+                    <source type="image/png" srcset="/flores_Grupo01_A.png">
+                    <img class="adorno adorno-1 aos-init aos-animate" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo01_A.png" alt="" loading="lazy">
+                </picture>
+                <picture>
+                    <source type="image/webp" srcset="/flores_Grupo01_B.webp">
+                    <source type="image/png" srcset="/flores_Grupo01_B.png">
+                    <img class="adorno adorno-2 aos-init aos-animate" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo01_B.png" alt="" loading="lazy">
+                </picture>
+                <picture>
+                    <source type="image/webp" srcset="/flores_Grupo01_C.webp">
+                    <source type="image/png" srcset="/flores_Grupo01_C.png">
+                    <img class="adorno adorno-3 aos-init aos-animate" data-aos="fade-down" data-aos-delay="500" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo01_C.png" alt="" loading="lazy">
+                </picture>
+                <picture>
+                    <source type="image/webp" srcset="/flores_Grupo01_D.webp">
+                    <source type="image/png" srcset="/flores_Grupo01_D.png">
+                    <img class="adorno adorno-4 aos-init aos-animate" data-aos="fade-down" data-aos-delay="600" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo01_D.png" alt="" loading="lazy">
+                </picture>
                 <div class="row d-flex justiy-content-center align-items-center">
                     <div class="content-portada text-center">
                         <div class="box-nombres-fecha-portada">
