--- a/src/blocks/regalos.astro
+++ b/src/blocks/regalos.astro
@@ -7,21 +7,21 @@
 
   <picture>
     <source type="image/webp" srcset="/flores_Grupo02_A.webp">
-    <!-- <source type="image/png" srcset="/flores_Grupo02_A.webp"> -->
+    <source type="image/png" srcset="/flores_Grupo02_A.png">
     <img class="adorno adorno-1 aos-init aos-animate" data-aos="fade-right" data-aos-delay="300" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo02_A.webp" alt="" loading="lazy">
   </picture>
 
 
   <picture>
     <source type="image/webp" srcset="/flores_Grupo02_B.webp">
-    <!-- <source type="image/png" srcset="/flores_Grupo02_B.webp"> -->
+    <source type="image/png" srcset="/flores_Grupo02_B.png">
     <img class="adorno adorno-2 aos-init aos-animate" data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo02_B.webp" alt="" loading="lazy">
   </picture>
 
 
   <picture>
     <source type="image/webp" srcset="/flores_Grupo02_C.webp">
-    <!-- <source type="image/png" srcset="/flores_Grupo02_C.webp"> -->
+    <source type="image/png" srcset="/flores_Grupo02_C.png">
     <img class="adorno adorno-3 aos-init aos-animate" data-aos="fade-right" data-aos-delay="500" data-aos-duration="1000" data-aos-once="false" src="/flores_Grupo02_C.webp" alt="" loading="lazy">
   </picture>
 
