checkpoint: Cuenta regresiva funcional

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,13 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import Portada from '@/blocks/portada.astro';
+import CuentaRegresiva from '@/blocks/cuenta-regresiva.astro';
 ---
 
 
 <Layout title="Mis 15 - Invitación">
 	<Portada />
-
+	<CuentaRegresiva />
 
 	<script>
 		import '../scripts/main.js';
