--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from '@/layouts/Layout.astro';
 import Portada from '@/blocks/portada.astro';
 import CuentaRegresiva from '@/blocks/cuenta-regresiva.astro';
+import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro';
 ---
 
 
 <Layout title="Mis 15 - Invitación">
 	<Portada />
 	<CuentaRegresiva />
+	<CeremoniaFiesta />
 
 	<script>
 		import '../scripts/main.js';
