checkpoint: regalos sin modal

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '@/layouts/Layout.astro';
 import Portada from '@/blocks/portada.astro';
 import CuentaRegresiva from '@/blocks/cuenta-regresiva.astro';
 import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro';
+
+import Regalos from '@/blocks/regalos.astro';
 ---
 
 
@@ -11,6 +13,7 @@ import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro';
 	<CuentaRegresiva />
 	<CeremoniaFiesta />
 
+	<Regalos />
 	<script>
 		import '../scripts/main.js';
 	</script>
