checkpoint: instagram funcional

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import CuentaRegresiva from '@/blocks/cuenta-regresiva.astro';
 import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro';
 
 import Regalos from '@/blocks/regalos.astro';
+import Instagram from '@/blocks/instagram.astro';
 ---
 
 
@@ -14,6 +15,8 @@ import Regalos from '@/blocks/regalos.astro';
 	<CeremoniaFiesta />
 
 	<Regalos />
+	<Instagram />
+
 	<script>
 		import '../scripts/main.js';
 	</script>
