checkpoint: footer no funcional

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import CeremoniaFiesta from '@/blocks/ceremonia-fiesta.astro';
 
 import Regalos from '@/blocks/regalos.astro';
 import Instagram from '@/blocks/instagram.astro';
+import Footer from '@/blocks/footer.astro';
 ---
 
 
@@ -16,6 +17,7 @@ import Instagram from '@/blocks/instagram.astro';
 
 	<Regalos />
 	<Instagram />
+	<Footer />
 
 	<script>
 		import '../scripts/main.js';
